think I fixed the overflow-x issue on the beer nav

--- a/wp-content/themes/wptheme-lfb-0.2/src/styles/_shame.scss
+++ b/wp-content/themes/wptheme-lfb-0.2/src/styles/_shame.scss
@@ -188,7 +188,3 @@ body {
     }
   }
 }
-
-.tabs-container {
-  width: 100% !important;
-}
